# apps/api/src/health/health.controller.ts
@@ -1,0 +1,13 @@
+import { Controller, Get, Header } from '@nestjs/common';
+
+@Controller('health')
+export class HealthController {
+  @Get()
+  @Header('Cache-Control', 'no-store')
+  public getHealth() {
+    return {
+      status: 'ok',
+      service: 'room-service-api',
+    };
+  }
+}
